Updating script numbering
This also included multiple updates to "3_carbon.Rmd," primarily cleaning the script up for archiving.

--- a/scripts/3_carbon.Rmd
+++ b/scripts/3_carbon.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Carbon sequestration"
 author: "Christopher L. Crawford"
-date: "11/16/2021"
+date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -12,10 +12,12 @@ source("/Users/christophercrawford/work/projects/abandonment_trajectories/script
 ```
 
 ```{r load-files}
-source("/Users/christophercrawford/work/projects/abandonment_trajectories/scripts/util/_util_files.R")
+source("/Users/christophercrawford/work/projects/abandonment_trajectories/scripts/_util/_util_files.R")
 ```
 
-# Methods
+# Development 
+
+## Methods
 
 Question: How much carbon could be sequestered over the course of the time series, for a) forests and, if possible, b) grasslands?
 
@@ -37,17 +39,18 @@ These pixel values correspond to the potential aboveground carbon accumulation r
 
 @Cook-Patton2020 also includes 1) estimates of below-ground carbon sequestration rates (based on root-to-shoot ratio, and 2) estimates of soil organic carbon sequestration (SOC) in forest areas, based on a single global mean value of 0.42 Mg C / ha / year.
 
-In order to calculate the carbon accumulated in each pixel, I will add the sequestration rates together (aboveground + belowground + SOC) to get an overall sequestration rate (Mg C / ha / year), which I will then multiply by the age of each pixel (years), and the area of each pixel (ha), to get a map of the carbon accumulated in each pixel.
+In order to calculate the carbon accumulated in each pixel, we add the sequestration rates together (aboveground + belowground + SOC) to get an overall sequestration rate (Mg C / ha / year), which we then multiplied by the age of each pixel (years) and the area of each pixel (ha), to get a map of the carbon accumulated in each pixel.
 
 \begin{equation}
-C_{accumulated} = MgC /ha /year * years (abandoned) * ha (area) = Mg C / pixel (\#eq:carbon-calculation)
+C_{accumulated} = MgC / ha / year * years (abandoned) * ha (area) = Mg C / pixel (\#eq:carbon-calculation)
 \end{equation}
 
-To calculate the total carbon accumulation, I then sum across all of these pixel values.
+To calculate the total carbon accumulation, I then summed across all of these pixel values.
 
 This is akin to a maximum value, assuming perfect conditions, and represents the maximum amount of carbon that could be stored in forests. The full extent of the Cook-Patton layer is everywhere that could climatically support forests, not necessarily what is or was in forest (i.e. PNV).
 
 Note: Cook-Patton explicitly do not calculate sequestration rates in “grassland and shrubland” biomes, but they do in “savanna” biomes. These are the ones that need to be clipped out. 
+We distinguish between forested and non-forested biomes using the Ecoregions2017 (RESOLVE) layer from Dinerstein et al. 2017 (*BioScience*), following Cook-Patton et al. 2020.
 
 Step 3: Soil Carbon accumulation.
 
@@ -65,17 +68,7 @@ In order to do this, we isolate pixels that are initially classified as cropland
 Units are in Mg C / ha. 
 We then divide this mean change in SOC stock by the length of the time period in order to get a accumulation rate in terms of Mg C / ha / year.
 
-```{r}
-3.54 # Mg C / ha
-3.54/20
-```
-
-
-
-Alternative method: crop based on PNV land cover map (Hengl, Martin, Visconti 2020) – what can return to forest is given forest rates (if they exist, otherwise the SOC rate), and everything else is given SOC rates.
-Note that I decided to simply use the Ecoregions 2017 layer, because this is what was used by @Cook-Patton2020 and many others.
-
-# 1. Separate Forest from Grassland
+## Ecoregions exploration
 
 ```{r prep-ecoregions2017}
 
@@ -495,975 +488,10 @@ ggplot() + theme_classic() +
 
 
 
-
-
-# 2. Forest Sequestration Rates (Cook-Patton et al. 2020)
-
-
-See West et al. 2010 PNAS (they applied the IPCC carbon seq values to a PNV map (Ramankutty et al. 1999)). This is what Folberth et al. 2020 Nat. Sustain. used.
-
-Harris et al. 2021 - Nature Climate Change: Global maps of twenty-first century forest carbon fluxes https://www.nature.com/articles/s41558-020-00976-6.
-Github: https://github.com/wri/carbon-budget
-
-Harris et al. 2021 actually use Cook-Patton et al. 2020 to model natural regeneration.
-Cook-Patton et al. 2020 Nature - https://www.nature.com/articles/s41586-020-2686-x
-
-Cook-Patton et al. 2021 One Earth - https://www.reforestationhub.org/
-
-
-```{r load-crop-forest_c}
-
-# This dataset is the full extent of area that has the climatic potential to support forest - but not where the PNV or historical vegetation was in forest.
-# Cook-Patton then clip this based on the Griscom layer of forests. 
-# Yiwen has clipped this based on PNV forest vs. grassland. 
-
- 
-forest_c <- rast(paste0(p_dat, "climate/Cook-Patton_2020/sequestration_rate_layer_in_full_extent.tif"))
-plot(forest_c, col = brewer_pal(palette = "Greens")(9), colNA = "gray80")
-plot(forest_c_abg, col = brewer_pal(palette = "Greens")(9), colNA = "gray80")
-
-
-# plot with Cook-Patton
-plot(forest_c_abg, col = brewer_pal(palette = "Greens")(9), colNA = "gray80")
-
-
-
-# add just savan
-
-forest_c_abg <- rast(
-  paste0(p_dat, "climate/Cook-Patton_2020/sequestration_rate__mean__aboveground__full_extent__Mg_C_ha_yr.tif"))
-forest_c_blg <- rast(
-  paste0(p_dat, "climate/Cook-Patton_2020/sequestration_rate__mean__belowground__full_extent__Mg_C_ha_yr.tif"))
-forest_c_abg_error <- rast(
-  paste0(p_dat, "climate/Cook-Patton_2020/sequestration_rate__error_ratio__aboveground__full_extent__unitless.tif"))
-
-# soil carbon in forested areas: 0.42 Mg C / ha / yr
-# "global average from our literature-derived data (0.42 Mg C ha−1 yr−1 ) for the shallower 0–30 cm profile"
-
-forest_c_total <- forest_c_abg + forest_c_blg #+ 0.42
-
-plot(forest_c_abg)
-plot(forest_c_blg)
-plot(forest_c_abg_error)
-
-
-# ---------------------------------------------- #
-# crop and resample multiple rasters, (with a buffer, to deal with NA issues)
-# ---------------------------------------------- #
-
-for (input in c("forest_c_abg", "forest_c_blg")) {
-  lapply(1:11, function(i) {
-    cc_crop_resample_r(
-      input_r = get(eval(input)), label = paste0("_", input),
-      site = site_df$site[i], 
-      output_path = paste0(p_dat_derived, "carbon/forests/"))
-  })
-  }
-
-
-# load back in
-
-# aboveground forest carbon sequestration, from Cook-Patton et al. 2020 Nature
-site_forest_c_abg_30 <- lapply(1:11, function(i) {
-  rast(paste0(p_dat_derived, "carbon/forests/", 
-              site_df$site[i], "_forest_c_abg_30.tif"))
-})
-
-# belowground forest carbon sequestration, from Cook-Patton et al. 2020 Nature
-site_forest_c_blg_30 <- lapply(1:11, function(i) {
-  rast(paste0(p_dat_derived, "carbon/forests/", 
-              site_df$site[i], "_forest_c_blg_30.tif"))
-})
-
-names(site_forest_c_abg_30) <- site_df$site
-names(site_forest_c_blg_30) <- site_df$site
-
-```
-
-```{r forest-c-accumulation}
-plot(site_savanna_mask[[9]])
-plot(site_forest_c_abg_30[[9]] + site_forest_c_blg_30[[9]] + 0.42)
-
-i
-plot(forest_c_seq_rate)
-
-lapply(1:11, function(i){
-  forest_c_seq_rate <- 
-    site_forest_c_abg_30[[i]] + site_forest_c_blg_30[[i]] + 0.42
-
-  forest_c_accumulation_tmp <- age_t[[i]] * forest_c_seq_rate
-  
-  # save
-  terra::writeRaster(forest_c_accumulation_tmp,
-                     filename = paste0(p_dat_derived, "carbon/forests/", 
-                                       site_df$site[i], "_forest_c_accumulation.tif"),
-                     overwrite = TRUE)
-  
-  tmpFiles(current=TRUE, orphan=TRUE, old=TRUE, 
-           remove=TRUE)
-  })
-
-```
-
-
-```{r save-forest-C-plot}
-pdf(file = paste0(p_output, "plots/forest_carbon_seq_rates.pdf"), width = 10, height = 7.5)
-mval <- 1.5
-par(mfrow = c(3, 4), 
-      # mar=c(0,0,0,0), 
-      oma=c(1,1,0,0), 
-      adj = 0,
-      cex.main = 1#,
-      # tcl = -0.2
-      )
-    
-for(i in 1:11) {
-  plot(site_forest_c[[i]], 
-       main = names(site_forest_c[i]),
-       mar = c(mval+0.5, mval, mval + 1.2, mval + 2) # bltr   
-       # type = "classes", #legend = FALSE,
-       )
-  }
-
-# plot.new()
-# plot(site_pnv[[i]], type = "classes",
-#      legend = "left",
-#      plg = list(cex = 0.7, title = "Potential Natural Vegetation", title.adj = 0),
-#      legend.only = TRUE,
-#      col = pnv_table$cols, 
-#      levels = pnv_table$labels
-#      )
-dev.off()
-
-```
-
-```{r resample-cp}
-
-# ----------------------------------------------- #
-# resolution
-# ----------------------------------------------- #
-res(site_forest_c$shaanxi) * 110 # = 0.9167 km grid (~ 1 km) at the equator, less at higher latitudes
-
-res(lc$shaanxi) * 110 # = 0.029644 km grid (~ 30 m) at the equator, less at higher latitudes
-
-0.9167/ 0.029644 # 30 times
-
-
-site_forest_c_30 <- lapply(1:11, function(i) {
-  terra::resample(
-    x = site_forest_c[[i]], y = lc[[i]]$y2017, method = "near",
-    filename = paste0(p_dat_derived, "site_forest_carbon/", names(lc[i]), "_forest_c_30.tif"),
-    names = paste0(names(lc[i]), "_forest_c_30"),
-    overwrite = TRUE)
-  }
-  )
-names(site_forest_c_30_b) <- site_df$site
-
-
-# load back in:
-site_forest_c_30 <- lapply(
-  list.files(paste0(p_dat_derived, "site_forest_carbon"), full.names = TRUE) %>% grep("_forest_c_30.tif", ., value = TRUE), 
-  function(i) rast(i)
-  )
-names(site_forest_c_30) <- site_df$site
-
-plot(site_forest_c$chongqing, main = "Original resolution, ~1km")
-plot(site_forest_c_30$chongqing, main = "Resampled to ~30 m")
-
-
-
-
-
-
-
-
-# exploring different methods for resampling (decided to stick with "near")
-
-fct3 <- lapply(3, function(i) {
-  terra::resample(
-    x = site_forest_c[[i]], y = lc[[i]]$y2017, method = "bilinear",
-    filename = paste0(p_dat_derived, "site_forest_carbon/", names(lc[i]), "_forest_c_30_bi.tif"),
-    names = paste0(names(lc[i]), "_forest_c_30"),
-    overwrite = TRUE)
-  }
-  )
-
-fct4 <- lapply(3, function(i) {
-  terra::resample(
-    x = site_forest_c[[i]], y = lc[[i]]$y2017, method = "cubic",
-    filename = paste0(p_dat_derived, "site_forest_carbon/", names(lc[i]), "_forest_c_30_cubic.tif"),
-    names = paste0(names(lc[i]), "_forest_c_30"),
-    overwrite = TRUE)
-  }
-  )
-
-par(mfrow = c(2,2))
-plot(site_forest_c$chongqing, main = "original, 1km")
-plot(fct1, main = "disagg, x30")
-plot(fct2[[1]], main = "resampled, 30m, near")
-plot(fct3[[1]], main = "resampled, 30m, bilinear", ext = ext(t_ext))
-plot(fct4[[1]], main = "resampled, 30m, cubic", ext = ext(t_ext))
-plot(fct4[[1]], main = "resampled, 30m, cubic")#, ext = ext(t_ext))
-warnings()
-dev.off()
-
-t_ext <- drawExtent()
-
-plot(site_forest_c$iraq, colNA = "blue")
-
-```
-
-```{r calc-total-carbon}
-
-# calculate the total carbon that could be accumulated in regenerating forest in abandoned croplands in each year
-# units are in terms of Mg C / ha / year.
-# so, multiplying the age of abandoned lands (in years) yields the total amount of carbon (in Mg C) accumulated in that pixel per ha.
-# to get to a total amount of carbon stored, I then need to multiply by the number of hectares in each pixel.
-# Mg C / ha / year * number of years * area of pixel in ha = Mg C per pixel
-
-# calculate Mg C per pixel:
-site_forest_c_30_per_pixel <- lapply(1:11, function(i) {
-  tmp <- site_forest_c_30[[i]] * 
-    site_area_ha[[i]]
-
-  writeRaster(tmp,
-              filename = paste0(p_dat_derived, "site_forest_carbon/", 
-                                site_df$site[i], "_forest_c_30_per_pixel.tif"),
-              overwrite = TRUE)
-}
-)
-names(site_forest_c_30_per_pixel) <- site_df$site
-
-
-
-
-site_forest_c_30$chongqing
-
-age_t$chongqing$y2017
-
-# total accumulation of forest carbon by the year 2017, at Chongqing
-total_carbon_per_ha_2017 <- 
-  site_forest_c_30$chongqing * 
-  age_t$chongqing$y2017
-
-tic()
-total_carbon_2017 <- lapply(1:11, function(i) {
-  tmp <- 
-    age_t[[i]]$y2017 * 
-    site_forest_c_30[[i]] * 
-    site_area_ha[[i]]
-
-  tmp
-}
-)
-toc() # 201 seconds (just over 3 minutes) for 11 sites, just 2017.
-total_carbon_2017
-names(total_carbon_2017) <- site_df$site
-
-
-
-# the full time series
-tic()
-site_carbon_acc <- lapply(1:11, function(i) {
-  tmp <- 
-    age_t[[i]] * 
-    site_forest_c_30_per_pixel[[i]]
-    # (site_forest_c_30[[i]] * 
-    # site_area_ha[[i]])
-
-  writeRaster(tmp,
-              filename = paste0(p_dat_derived, "site_forest_carbon/total/", 
-                                site_df$site[i], "_carbon_accumulation.tif"),
-              overwrite = TRUE)
-
-})
-toc() # 288 for CQ, 402 for CQ and Goias, 2600 seconds for all 11 sites
-names(site_carbon_acc) <- site_df$site
-
-# load it back in:
-# 
-# site_carbon_acc <- lapply(
-#   list.files(paste0(p_dat_derived, "site_forest_carbon/total"), full.names = TRUE), 
-#   function(i) rast(i)
-#   )
-# names(site_carbon_acc) <- site_df$site
-
-
-# ------------------------------- #
-# calculate the sum total amount of carbon accumulated at each site:
-# ------------------------------- #
-tic()
-site_carbon_df <- lapply(1:11, function(i) {
-  # tmp <- global(total_carbon_2017[[i]], fun = "sum", na.rm = TRUE) # Mg C
-  tmp <- global(site_carbon_acc[[i]], fun = "sum", na.rm = TRUE) # Mg C
-  tmp <- tmp %>% 
-    as_tibble() %>% 
-    rownames_to_column(var = "year") %>%
-    mutate(#year = gsub("y", "", year),
-           site = site_df$site[i]
-           )
-  tmp
-}) %>% bind_rows()
-toc()
-
-site_carbon_df <-
-  site_carbon_df %>% 
-  mutate(year = as.numeric(year) + 1986) %>%
-  rename(total_c_Mg = sum)
-
-# save site_carbon_df
-write_csv(site_carbon_df, 
-          file = paste0(p_dat_derived, "/site_carbon_df.csv")
-          )
-
-cq_fc
-
-
-
-dt1 <- data.table(v1 = 1:10, v2 = seq(from = 2, to = 20, by = 2))
-dt2 <- data.table(v3 = 1:10)
-dt1
-dt2
-dt1 * dt2$v3
-
-cdt <- spatraster_to_dt(c(age_t[[3]]$y2017,
-  site_forest_c_30[[i]], # forest carbon sequestration rates, in Mg C / ha / year
-      site_area_ha[[i]]))
-
-cdt[!is.na(y2017),][]
-
-my_ext <- drawExtent()
-
-terra::plot(forest_c, ext = ext(my_ext), type = "continuous")
-terra::plot(forest_c, ext = ext(age_t$chongqing), type = "continuous")
-plot(site_forest_c_30$chongqing, colNA= "blue", #ext = ext(my_ext), 
-     add = T)
-
-cq_plus <- crop(forest_c, ext(age_t$chongqing) + rep(0.1, 4))
-cq_plus_resam <- terra::resample(
-    x = cq_plus, y = lc[[i]]$y2017, method = "near")
-
-plot(cq_plus)
-plot(cq_plus_resam, colNA= "blue",
-     add = T)
-plot(cq_plus_resam)
-is.na(values(cq_plus_resam)) %>% sum()
-is.na(values(site_forest_c_30$chongqing)) %>% sum()
-
-plot(age_t$chongqing$y2017)
-plot(cq_plus_resam, add = T)
-
-# ok, so there is some issue with the NA strip... maybe something having to do with the cropping and resampling?
-
-# does this happen with other sites?
-w_plus <- crop(forest_c, ext(age_t$wisconsin) + rep(0.1, 4))
-plot(w_plus)
-plot(site_forest_c_30$wisconsin, colNA= "blue", #ext = ext(my_ext), 
-     add = T)
-
-w_age_na <- terra::mask(age_t[[3]]$y2017, site_forest_c_30[[3]], inverse = TRUE)
-plot(w_age_na)
-w1 <- terra::cellSize(w_age_na, unit = "ha", mask = TRUE) %>% global(fun = "sum", na.rm = TRUE)
-plot(w1)
-
-area_of_age_na1 <- 
-  lapply(1:11, function(i) {
-    terra::mask(age_t[[i]]$y2017, site_forest_c_30[[i]], inverse = TRUE) %>%
-      terra::cellSize(., unit = "ha", mask = TRUE) %>% 
-      global(fun = "sum", na.rm = TRUE)
-  }) %>% bind_rows(.id = "site") %>%
-   as_tibble() %>%
-  mutate(site = site_df$site)
-  
-area_of_age_na # original, without buffer:
-area_of_age_na1 # after doing the buffer
-area_of_age_na_b
-
-
-area_of_age_na_b
-area_of_age_na
-
-plot(site_forest_c_30_b$chongqing)
-plot(site_forest_c_30$chongqing)
-
-
-area_of_age_na_b <- 
-  lapply(1:11, function(i) {
-    terra::mask(age_t[[i]]$y2017, site_forest_c_30_b[[i]], inverse = TRUE) %>%
-      terra::cellSize(., unit = "ha", mask = TRUE) %>% 
-      global(fun = "sum", na.rm = TRUE)
-  }) %>% 
-  bind_rows(.id = "site") %>% 
-  as_tibble() %>%
-  mutate(site = site_df$site)
-
-
-area_summary_df %>% 
-  select(site, area_abn_ha_2017) %>%
-  left_join(., area_of_age_na, by= "site") %>%
-  mutate(prop = sum/area_abn_ha_2017 * 100)
-
-plot(w1)
-ext(lc[[i]]$y2017) == ext(age_t$chongqing$y2017)
-
-plot(site_forest_c_30$chongqing)
-plot(cq_plus)
-
-
-
-cdt[y2017>=5 & is.na(chongqing_forest_c_30), ]
-
-cdt_age <- fread(paste0(p_dat_derived, "age_dts/chongqing_age_2021_03_13.csv"))
-
-cdt_age_m <- merge(cdt_age[, .(x, y, y2010)], cdt[, !c("y2017")], by = c("x","y"), sort = FALSE)
-
-tdt <- cdt[, .(y2017)] * cdt$chongqing_forest_c_30 * cdt$chongqing_area_ha
-tdt[, sum(y2017, na.rm = TRUE)]
-
-cq_fc[31,] # checks out
-
-
-
-
-plot(total_carbon[[1:8]])
-
-plot(total_carbon[[31]])
-plot(total_carbon_2017)
-
-
-
-# ------------------------------- #
-# calculate sum across site:
-# ------------------------------- #
-total_carbon_2017
-
-total_c_2017 <- lapply(1:11, function(i) {
-  tmp <- global(total_carbon_2017[[i]], fun = "sum", na.rm = TRUE) # Mg C
-  tmp
-}) 
-
-total_c_2017 %>% bind_rows() %>%
-  rownames_to_column(var = "site") %>%
-  mutate(site = gsub("_forest_c_30", "", site))
-
-cq_fc <- global(total_carbon,  fun = "sum", na.rm = TRUE)
-
-
-tic()
-o_fc <- total_carbon_o %>% global(.,  fun = "sum", na.rm = TRUE)
-toc() # 50 seconds.
-
-cq_fc <- cq_fc %>% mutate(year = 1987:2017)
-ggplot(data = cq_fc) + 
-  geom_point(mapping = aes(x = year, y = sum))
-
-length(cq_fc)
-
-
-global(total_carbon, fun = "sum", na.rm = TRUE) # Mg C
-global(total_carbon, fun = "sum", na.rm = TRUE) # Mg C
-
-
-
-
-
-
-
-
-# ------------------------------- #
-# print a pdf of the maps
-# ------------------------------- #
-
-par(mfrow = c(2,2))
-plot(age_t$chongqing$y2017, main = "Abandonment age as of 2017")
-plot(site_forest_c_30$chongqing, main = "forest carbon accumulation rates")
-plot(total_carbon_per_ha_2017, main = "Accumulated carbon per ha in abandoned croplands as of 2017")
-plot(total_carbon, main = "Total accumulated carbon per pixel in abandoned croplands as of 2017")
-
-
-# Plot
-{
-  pdf(file = paste0(p_output, "plots/total_forest_c_accumulated_CQ.pdf"), width = 9, height = 7)
-  mval <- 1.5
-  
-  par(mfrow = c(2, 2), oma=c(1,1,0,0), adj = 0)
-  plot(age_t$chongqing$y2017, main = "Abandonment age as of 2017")
-  plot(site_forest_c_30$chongqing, main = "forest carbon accumulation rates")
-  plot(total_carbon_per_ha_2017, main = "Accumulated carbon per ha in abandoned croplands as of 2017")
-  plot(total_carbon_2017, main = "Total accumulated carbon per pixel in abandoned croplands as of 2017")  
-  dev.off()
-}
-
-
-
-# all eleven
-pdf(file = paste0(p_output, "plots/forest_carbon_seq_rates.pdf"), width = 10, height = 7.5)
-mval <- 1.5
-par(mfrow = c(3, 4), 
-      # mar=c(0,0,0,0), 
-      oma=c(1,1,0,0), 
-      adj = 0,
-      cex.main = 1#,
-      # tcl = -0.2
-      )
-    
-for(i in 1:11) {
-  plot(site_forest_c[[i]], 
-       main = names(site_forest_c[i]),
-       mar = c(mval+0.5, mval, mval + 1.2, mval + 2) # bltr   
-       # type = "classes", #legend = FALSE,
-       )
-}
-
-dev.off()
-
-```
-
-# 3. Soil Organic Carbon (SOC) sequestration rates (SoilsRevealed)
-
-## Grassland Exploration
-
-What is a good source for grassland carbon sequestration rates?
-
-Quoting from Chapter 2 when I talk about grasslands:
-Grassland biomes, where much of the abandonment we observed occurred, can also harbor substantial amounts of carbon sequestered in soils [@Lal2004].
-However, grassland soil carbon may accumulate even more slowly than aboveground forest biomass, taking a century or longer to return to reference levels [@Yang2019].
-For example, while abandoned croplands across Russia accumulated a total of 13.2 Mg C/ha in the top 5 cm of soil during the first 20 years following abandonment, these fields still had significantly less carbon sequestered than reference grasslands after 24 years of observation, and were expected to take >60 years to recover to reference levels [@Wertebach2017].
-
-Wertebach et al. 2019 was based on data collected in Tyumen Oblast, which is to the east of Orenburg.
-
-```{r tyumen}
-russia <- ne_countries(scale = 110, returnclass = "sf", country = "russia")
-russia <- ne_states(#scale = 110, 
-                    returnclass = "sf", country = "russia")
-
-plot(russia$geometry)
-
-russia$name %>% grep("Tyumen", ., value = TRUE)
-
-tyumen <- russia %>%
-  filter(name == "Tyumen'") %>% 
-  st_geometry
-
-tyumen %>%
-  plot()
-
-
-
-
-st_bbox(tyumen) %>% extent %>% terra::ext()
-
-
-tyumen_pnv <- terra::crop(pnv, terra::ext(extent(st_bbox(tyumen))))
-tyumen_for <- terra::crop(forest_c, terra::ext(extent(st_bbox(tyumen))))
-plot(tyumen_for)
-
-tyumen_biomes <- st_crop(biomes, st_bbox(tyumen))
-plot(tyumen_biomes[["biomes"]])
-plot(tyumen_biomes$geometry)
-plot(tyumen_biomes)
-
-
-tyumen_ext <- terra::draw()
-
-plot(tyumen_pnv,
-     col = filter(pnv_table, Number %in% freq(tyumen_pnv)[, "value"])$cols, 
-     levels = filter(pnv_table, Number %in% freq(tyumen_pnv)[, "value"])$labels,
-     ext = tyumen_ext)
-
-plot(tyumen, border = "red", add = T)
-
-
-# ------------------------------------------------------- #
-# wertebach's carbon sequestration rate for the average abandoned soils in Russia:
-13.2 / 20 # 0.66 Mg C / ha / year (for 0-5 cm soil depth)
-# stored more quickly in early stages of succession than in later stages
-# this is opposite what they found in Yang et al. 2019
-
-# 
-```
-
-## Analysis
-
-```{r load-soils.revealed}
-soils_revealed_files <- 
-  list.files(paste0(p_dat, "soil/soils_revealed"), 
-             full.names = TRUE)
-
-soils_rw_Y20 <- rast(
-  paste0(p_dat, "soil/soils_revealed/scenario_rewilding_dSOC_Y20.tif")
-)
-soils_rw_YSS <- rast(
-  paste0(p_dat, "soil/soils_revealed/scenario_rewilding_dSOC_YSS.tif")
-)
-
-soils_lc <- rast(
-  paste0(p_dat, "soil/soils_revealed/lc_ipcc.tif")
-  )
-
-
-
-soils_revealed_all <- rast(c(grep(".tif", 
-                                  soils_revealed_files, value = TRUE)
-                             ))
-
-soils_revealed_all <- rast(soils_revealed_files[c(2, 14, 15, 17)])
-
-
-
-# crop, resample
-
-for (input in c("soils_rw_Y20", "soils_rw_YSS",
-                "soils_lc"
-                )) {
-  lapply(1:11, function(i) {
-    cc_crop_resample_r(
-      input_r = get(eval(input)), label = paste0("_", input),
-      site = site_df$site[i], 
-      output_path = paste0(p_dat_derived, "carbon/soils/"))
-  })
-  }
-
-
-# load back in
-
-# soils revealed, rewilding scenario, year 20
-site_soils_rw_Y20_30 <- lapply(1:11, function(i) {
-  rast(paste0(p_dat_derived, "carbon/soils/", 
-              site_df$site[i], "_soils_rw_Y20_30.tif"))
-})
-
-# soils revealed, rewilding scenario, Steady State (year 80)
-site_soils_rw_YSS_30 <- lapply(1:11, function(i) {
-  rast(paste0(p_dat_derived, "carbon/soils/", 
-              site_df$site[i], "_soils_rw_YSS_30.tif"))
-})
-
-# IPCC land cover classes, used by Soils Revealed
-site_soils_lc_30 <- lapply(1:11, function(i) {
-  rast(paste0(p_dat_derived, "carbon/soils/", 
-              site_df$site[i], "_soils_lc_30.tif"))
-})
-
-names(site_soils_rw_Y20_30) <- site_df$site
-names(site_soils_rw_YSS_30) <- site_df$site
-names(site_soils_lc_30) <- site_df$site
-```
-
-```{r calc-mean-rate-cropland}
-
-# lc_ipcc land cover classes are:
-# 1. Forest, 2. Cropland, 3. Grassland, 4. Wetlands, 5. Settlements, 6. Other, 7. Water??
-# 1. Forest land - This category includes all land with woody vegetation consistent with thresholds used to define forest land in the national GHG inventory, sub-divided into managed and unmanaged, and also by ecosystem type as specified in the IPCC Guidelines. It also includes systems with vegetation that currently fall below, but are expected to exceed, the threshold of the forest land category.
-# 2. Cropland - This category includes arable and tillage land, and agro-forestry systems where vegetation falls below the thresholds used for the forest land category, consistent with the selection of national definitions.
-# 3. Grassland - This category includes rangelands and pasture land that is not considered as cropland. It also includes systems with vegetation that fall below the threshold used in the forest land category and are not expected to exceed, without human intervention, the threshold used in the forest land category. The category also includes all grassland from wild lands to recreational areas as well as agricultural and silvi-pastural systems, subdivided into managed and unmanaged consistent with national definitions.
-# 4. Wetlands - This category includes land that is covered or saturated by water for all or part of the year (e.g., peatland) and that does not fall into the forest land, cropland, grassland or settlements categories. The category can be subdivided into managed and unmanaged according to national definitions. It includes reservoirs as a managed sub-division and natural rivers and lakes as unmanaged sub-divisions.
-# 5. Settlements - This category includes all developed land, including transportation infrastructure and human settlements of any size, unless they are already included under other categories. This should be consistent with the selection of national definitions.
-# 6. Other land - This category includes bare soil, rock, ice, and all unmanaged land areas that do not fall into any of the other five categories. It allows the total of identified land areas to match the national area, where data are available.
-# 7. Chris' assumption: NA values, or water, etc.
-
-i<- 9
-
-plot(site_soils_lc_30[[i]], 
-     type = "classes",
-     levels = c("1. Forest", "2. Cropland", "3. Grassland", 
-                "4. Wetlands", "5. Settlements", "6. Other", "7. Water")
-     )
-
-plot(site_soils_lc_30[[i]], 
-     levels = c("1. Forest", "2. Cropland", "3. Grassland", 
-                "4. Wetlands", "5. Settlements", "6. Other", "7. Water"),
-     range = c(1, 2))
-
-plot(age_t[[i]][[31]])
-
-
-# mask the rewilding layer by land cover class 2:
-# can use:
-terra::classify()
-terra::subst()
-
-i <- 9
-
-
-test_mask <- terra::mask(
-  x = site_soils_rw_Y20_30[[i]],
-  mask = site_soils_lc_30[[i]],
-  maskvalues = 2, inverse = TRUE,
-  filename = paste0(p_dat_derived, "carbon/soils/", 
-                    site_df$site[i], "_soils_rw_Y20_30_cropland_only.tif"),
-  overwrite = TRUE
-  )
-
-
-
-plot(test_mask)
-mean(test_mask)
-plot(site_soils_rw_Y20_30[[i]])
-
-global(test_mask, fun = "mean", na.rm = TRUE)
-
-# make a mask with just 
-
-
-
-# mask soil layer to only cropland:
-
-for (input in c("site_soils_rw_Y20_30", "site_soils_rw_YSS_30")) {
-  lapply(1:11, function(i) {
-    terra::mask(
-      x = get(eval(input))[[i]],
-      mask = site_soils_lc_30[[i]],
-      maskvalues = 2, inverse = TRUE,
-      filename = paste0(p_dat_derived, "carbon/soils/", 
-                        site_df$site[i], gsub("site", "", input), "_cropland_only.tif"),
-      overwrite = TRUE
-      )
-  })
-  }
-
-# load back in:
-
-# soils revealed, rewilding scenario, year 20
-site_soils_rw_Y20_30_cropland <- lapply(1:11, function(i) {
-  rast(paste0(p_dat_derived, "carbon/soils/", 
-              site_df$site[i], "_soils_rw_Y20_30_cropland_only.tif"))
-})
-
-# soils revealed, rewilding scenario, Steady State (year 80)
-site_soils_rw_YSS_30_cropland <- lapply(1:11, function(i) {
-  rast(paste0(p_dat_derived, "carbon/soils/", 
-              site_df$site[i], "_soils_rw_YSS_30_cropland_only.tif"))
-})
-
-
-names(site_soils_rw_Y20_30_cropland) <- site_df$site
-names(site_soils_rw_YSS_30_cropland) <- site_df$site
-
-soc_mean <- lapply(c("site_soils_rw_Y20_30_cropland", "site_soils_rw_YSS_30_cropland"), 
-       function(input) {
-         tibble(site = site_df$site,
-                mean_soc = sapply(1:11, function(i) {
-                  global(get(eval(input))[[i]], 
-                         fun = "mean", na.rm = TRUE) %>% as.numeric()
-                  }),
-                type = input)
-       }) %>%
-  bind_rows() %>% 
-  mutate(
-    timespan = 
-      case_when(grepl("Y20", type) ~ 20,
-                grepl("YSS", type) ~ 80),
-    mean_annual_soc = mean_soc/timespan)
-
-
-soc_mean
-# ok, with the mean value, then I multiply this value by the age of abandoned cropland
-
-```
-
-
-```{r calc-soc-accumulation}
-
-# ----------------------------------------------------------------- #
-# multiply decomposed age rasters by annual rates
-# ----------------------------------------------------------------- #
-soc_mean %>%
-  filter(site == site_df$site[i],
-         timespan == 20) %>%
-  .$mean_annual_soc
-
-i <- 9
-
-
-
-lapply(1:11, function(i){
-  # extract soc accumulation rates, for different timespans:
-  tmp_soc_rate_20 <- soc_mean %>%
-    filter(site == site_df$site[i],
-           timespan == 20) %>%
-    .$mean_annual_soc
-  
-  tmp_soc_rate_80 <- soc_mean %>%
-    filter(site == site_df$site[i],
-           timespan == 80) %>%
-    .$mean_annual_soc
-  
-  # calculate total accumulation in each year
-  soc_accumulation_tmp <- 
-    age_up_to_20[[i]] * tmp_soc_rate_20 + 
-    age_21_plus[[i]] * tmp_soc_rate_80
-
-  terra::writeRaster(soc_accumulation_tmp,
-                     filename = paste0(p_dat_derived, "carbon/soils/", 
-                                       site_df$site[i], "_soc_accumulation.tif"),
-                     overwrite = TRUE)
-  
-  tmpFiles(current=TRUE, orphan=TRUE, old=TRUE, 
-           remove=TRUE)
-  })
-
-
-
-# load back in:
-# soils revealed, rewilding scenario, Steady State (year 80)
-site_soc_accumulation <- lapply(1:11, function(i) {
-  rast(paste0(p_dat_derived, "carbon/soils/", 
-              site_df$site[i], "_soc_accumulation.tif"))
-})
-names(site_soc_accumulation) <- site_df$site
-
-plot(site_soc_accumulation[[9]], 28:31)
-```
-
-
-
-
-
-```{r plot-soils.revealed-expl}
-site_soils_revealed_all[9] %>% names()
-
-save_3x4_site_plot <- function(the_raster,
-                               mval = 1.5,
-                               file_name,
-                               layer) {
-  
-  pdf(file = paste0(p_output, "plots/", file_name, ".pdf"), 
-      width = 10, height = 7.5)
-  
-  par(mfrow = c(3, 4), 
-        oma=c(1,1,0,0), 
-        adj = 0,
-        cex.main = 1#,
-        )
-      
-  for(i in 1:11) {
-    plot(the_raster[[i]][[layer]], 
-         main = names(the_raster[i]), breaks = c(1, 2, 3, 4, 7), 
-         col = c("dark green", "gold", "light green", "gray"),
-         type = "continuous",
-         #legend = FALSE,
-         mar = c(mval+0.5, mval, mval + 1.2, mval + 2) # bltr   
-         )
-    }
-  
-  dev.off()
-}
-
-
-save_3x4_site_plot(the_raster = site_soils_revealed_all,
-                   layer = 1,
-                   file_name = "soils_revealed_lc_ipcc")
-
-save_3x4_site_plot(the_raster = site_soils_revealed_all,
-                   layer = 2, 
-                   file_name = "soils_revealed_Y20")
-
-save_3x4_site_plot(the_raster = site_soils_revealed_all,
-                   layer = 3, 
-                   file_name = "soils_revealed_YSS")
-
-save_3x4_site_plot(the_raster = site_soils_revealed_all,
-                   layer = 4, 
-                   file_name = "soils_revealed_socref")
-
-
-save_3x4_site_plot(the_raster = lapply(site_soils_revealed_rewilding_Y20, function(i){i/20}), 
-                   file_name = "soils_revealed_Y20_rate")
-
-
-
-plot(site_soils_revealed_all[[9]])
-plot(site_soils_revealed_all[[9]]$lc_ipcc, type = "classes")
-plot(site_soils_revealed_all[[9]]$lc_ipcc, type = "interval", 
-     breaks = c(1, 2, 3, 4, 7),
-     levels = c("1. forest", "2. crop", "3. grass", "everything else"))
-
-plot(site_soils_revealed_all[[9]]$lc_ipcc, type = "classes")
-
-my_site <- 3
-# 1. Forest, 2. Cropland, 3. Grassland, 4. Wetlands, 5. Settlements, 6. Other, 7. Water??
-plot(site_soils_revealed_all[[my_site]]$lc_ipcc, breaks = c(1.9, 2.1))
-plot(site_soils_revealed_all[[my_site]]$scenario_rewilding_dSOC_Y20, 
-     type = "classes")
-
-hist(site_soils_revealed_all[[9]]$scenario_rewilding_dSOC_Y20)
-
-
-
-
-plot(lc$shaanxi$y2015, breaks = c(2.9, 3.1))
-plot(lc$shaanxi[[c(1,31)]], breaks = c(2.9, 3.1), legend = F)
-plot(lc$nebraska[[c(1,31)]], breaks = c(2.9, 3.1), legend = F)
-
-
-# lc_ipcc land cover classes are:
-# 1. Forest, 2. Cropland, 3. Grassland, 4. Wetlands, 5. Settlements, 6. Other, 7. Water??
-# 1. Forest land - This category includes all land with woody vegetation consistent with thresholds used to define forest land in the national GHG inventory, sub-divided into managed and unmanaged, and also by ecosystem type as specified in the IPCC Guidelines. It also includes systems with vegetation that currently fall below, but are expected to exceed, the threshold of the forest land category.
-# 2. Cropland - This category includes arable and tillage land, and agro-forestry systems where vegetation falls below the thresholds used for the forest land category, consistent with the selection of national definitions.
-# 3. Grassland - This category includes rangelands and pasture land that is not considered as cropland. It also includes systems with vegetation that fall below the threshold used in the forest land category and are not expected to exceed, without human intervention, the threshold used in the forest land category. The category also includes all grassland from wild lands to recreational areas as well as agricultural and silvi-pastural systems, subdivided into managed and unmanaged consistent with national definitions.
-# 4. Wetlands - This category includes land that is covered or saturated by water for all or part of the year (e.g., peatland) and that does not fall into the forest land, cropland, grassland or settlements categories. The category can be subdivided into managed and unmanaged according to national definitions. It includes reservoirs as a managed sub-division and natural rivers and lakes as unmanaged sub-divisions.
-# 5. Settlements - This category includes all developed land, including transportation infrastructure and human settlements of any size, unless they are already included under other categories. This should be consistent with the selection of national definitions.
-# 6. Other land - This category includes bare soil, rock, ice, and all unmanaged land areas that do not fall into any of the other five categories. It allows the total of identified land areas to match the national area, where data are available.
-# 7. Chris' assumption: NA values, or water, etc.
-```
-
-
-```{r calc-Y20-mean-rate}
-
-plot(site_soils_revealed_rewilding_Y20[[6]]/20, type = "continuous")
-
-# calculate the mean annual rate of SOC sequestration, by simply dividing the change over 20 years by 20:
-
-site_SOC_Y20_mean_rate <- 
-  lapply(1:11, function(i){
-    mean_rate <- global(site_soils_revealed_rewilding_Y20[[i]]/20, 
-                        fun = "mean", na.rm = TRUE)
-    
-    tmp_df <- tibble(index = i,
-                     site = site_df$site[i]) %>%
-      mutate(mean_rate = mean_rate)
-    
-    tmp_df
-  }) %>% bind_rows()
-
-
-site_soils_revealed_rewilding_Y20[[9]]/20
-global(site_soils_revealed_rewilding_Y20[[9]]/20, fun = "mean", na.rm = TRUE) # Mg C / ha / year
-
-
-```
-
-
-
-# 4. Combine forest and SOC accumulation
-
-SOC
-- extract values for just cropland
-- average to get a single annual soil organic carbon accumulation rate for both the 20 year timespan and the 80 year timespan 
-- separate age_t raster into two, ages <=20, and ages >21.
-- multiply these separated age rasters by the mean soc rates for each timespan to get two soc accumulation timeseries
-
-Forest
-- add aboveground and belowground forest carbon accumulation rate (annual) maps together, plus an extra 0.42 as the global mean soc accumulation rate for forests. 
-- multiply this total forest carbon accumulation rate layer by the age raster
-
-
-Steps:
-1. Mask out the "savanna/grassland" areas from the forest carbon layer, using the savanna mask
-2. Mask the SOC accumulation layer by the forest layer (masked).
-3. Convert NAs in both of these masked carbon accumulation layers to 0, to allow them to be added together. 
-4. Add the forest accumulation (masked) to the soc accumulation (masked).
-5. Multiply by area per pixel
-6. Summarize raster time series
-
-It'd probably be faster to do the savanna masking at an earlier stage, to avoid having to mask and update values across 31 layers.
-The challenge with the two SOC rates is that it requires multiplication by two decomposed age time series, but I can just create two per-pixel accumulation rates at the earlier stage.
-And, I should multiply by area at an earlier stage too, to speed things up.
-
 # Final workflow
 
-New plan:
+Analysis outline:
+
 Forest:
 1. Add aboveground and belowground forest carbon accumulation rate (annual) maps together, plus an extra 0.42 as the global mean soc accumulation rate for forests, in order to get a total forest carbon accumulation rate layer.
 
@@ -1960,9 +988,11 @@ names(site_forest_soc_combined_per_pixel) <- site_df$site
 
 ## Calculate total C accumulation
 
-See script: 6_carbon.R
+See below ("Using `data.table` for final carbon calculation") and "7_carbon.R," which uses a custom function "cc_calc_carbon_accumulation()" to calculate carbon accumulation in abandoned croplands using `data.table`. 
 
-### Using {terra} for final carbon calculation
+### Using `terra` for final carbon calculation, for comparison
+
+This code is not necessary, but was used in development of the final method (see below "Using `data.table` for final carbon calculation")
 
 ```{r separate-age-t}
 # Note: The first 20 years experience an annual rate based on Y20 (/20), and each year after that experiences an annual rate calculated from YSS (/80).
@@ -2324,16 +1354,15 @@ write_csv(site_carbon_df,
 site_carbon_df_t <- read_csv(file = paste0(p_derived2, "/site_carbon_df_t.csv"))
 ```
 
-### Using {data.table} for final carbon calculation
+### Using `data.table` for final carbon calculation
 
-One issue with the {terra} code above: how do I exclude the carbon stored in uncultivated croplands that are less than 5 years, and therefore, not technically considered to be abandoned by our abandonment definition?
+One issue with the {terra} code above: it does not allow me to easily exclude the carbon stored in uncultivated croplands that are less than 5 years (and therefore, not technically considered to be abandoned by our abandonment definition).
 Strictly speaking, the carbon estimate with {terra} is an overestimate of the carbon stored in abandoned croplands, because it includes carbon sequestration in fallow periods that last between 1-4 years.
-This isn't likely to be much, but it's something.
 
-So, our new approach is to exclude carbon sequestration in abandoned croplands that are younger than 5 years. 
+So, our final approach is to exclude carbon sequestration in abandoned croplands that are younger than 5 years. 
 (Ideally, I'd be able to remove periods of <5 years, but that would involve some tricky data.table wrangling, and the area statistics I report in the rest of the paper are restricted to >=5 years.)
 
-See "scripts/cluster/6_carbon.R".
+See "scripts/cluster/7_carbon.R".
 This script does the following:
 1. loads the combined forest and SOC layer and max_age rasters,
 2. applies the custom function "cc_calc_carbon_accumulation()", which:
@@ -2432,7 +1461,6 @@ for (input in c(
   # "site_soils_rw_YSS_30",
   # "site_savanna_mask"
   "site_forest_soc_combined",   "site_forest_soc_combined_per_pixel"
-  # "site_forest_c_accumulation", "site_soc_accumulation"
   )) {
   pdf(file = paste0(p_output, "plots/", run_label, "/carbon/",
                     gsub("site_", "", input), "_YSS",# "_annual",
