--- a/scripts/1_summary_stats.Rmd
+++ b/scripts/1_summary_stats.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Summary statistics"
 author: "Christopher L. Crawford"
-date: "4/23/2021"
+date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -10,16 +10,16 @@ editor_options:
 The markdown document calculates the primary summary statistics for the Crawford et al. abandonment trajectories manuscript (see: https://github.com/chriscra/abandonment_trajectories).
 It is loosely organized as follows:
 
-1. Prepping the derived abandonment length, **persistence, area, and turnover data**.
+1. Prepping the derived abandonment length, persistence, area, and turnover data.
 
 2. Calculating **summary statistics** for the manuscript, particularly the mean duration of abandonment at each site.
   a. Saving plots of the mean abandonment duration for our five-year threshold, and across a range of thresholds (1, 3, 5, 7, 10), 
-  b. Plotting the mean abandonment duration along with the underlying distribution of all abandonment periods. This resulted in the main text Figure 2 (and a corresponding figure in the SI for max lengths).
+  b. Plotting the mean observed abandonment duration along with the underlying distribution of all abandonment periods. This resulted in the main text Figure 4 (and a corresponding figure in the SI for max lengths, for potential abandonment without recultivation, and recultivation periods themselves).
   
 3. Calculating the **area abandoned**, resulting in *area_summary_df*. This also involved:
   a. Calculating the area of those pixels classified as cropland at least once during the time series (*the total cropland extent*), 
   b. Plotting in a three plot panel figure, 1) Area abandoned as of 2017, 2) Area abandoned at least once between 1987-2017, and 3) Area abandoned as of 2017 as a proportion of total cropland extent.
-  c. Calculating the mean proportion of abandoned land that is recultivated at each site (allowing for multiple instances of abandonment for pixel), and how this changes based on the chosen definition of abandonment (1, 3, 5, 7, or 10 years). [Note that the script "cluster/4_lc_of_abn.R" calculates the proportion of abandonment (as of 2017) that is classified as woody vegetation vs. grassy (herbaceous) vegetation.]
+  c. Calculating the mean proportion of abandoned land that is recultivated at each site (allowing for multiple instances of abandonment for pixel), and how this changes based on the chosen definition of abandonment (1, 3, 5, 7, or 10 years). [Note that the script "cluster/6_lc_of_abn.R" calculates the proportion of abandonment (as of 2017) that is classified as woody vegetation vs. grassy (herbaceous) vegetation.]
 
 4. Comparing our method for identifying abandonment using the full annual time series to a commonly used two-year method, using just two distinct time points.
   a. This involved creating maps of abandonment as of 2017 using these two methods, 
@@ -1730,7 +1730,7 @@ ggsave(plot = gg_mean_recult_length +
     width = 3.42, height = 5, units = "in")
 ```
 
-### manual fig 2
+### [*Final*] Manually producing distribution figures
 
 ```{r man-fig2}
 
@@ -1978,7 +1978,8 @@ ggsave(plot = gg_fig2_manual_potential,
     width = 3.5, height = 5, units = "in")
 
 ```
-```{r pot2}
+
+```{r overlaying-obs-pot-distributions}
 
 gg_fig2_manual_overlap_potential <- length_distill_df %>% 
   select(-site_long) %>%
@@ -3188,278 +3189,6 @@ gtsave(gt_2yr, filename = paste0(p_plots, run_label, "/",
 
 ```
 
-# Revision sandbox:
-
-Factors that require consideration:
-- can I simply reverse the way `cc_calc_age()` works? (i.e., 0 to 1). YES
-- should I restrict recultivation to only the periods following abandonment of 5 years or more? YES
-- 
-
-```{r calculating-length-of-recultivation}
-
-{ # replicate the abn filtering
-dt <- cc_create_bin(numcol = 25)
-dt[c(3, 13), 12:15] <- 0
-dt[c(13), 22:25] <- 0
-# dt <- data.table::copy(dt0)
-
-dt_age <- data.table::copy(dt)
-cc_calc_age(dt_age)
-cc_erase_non_abn_periods(dt_age)
-dt_diff <- cc_diff_dt(dt_age)
-al_df <- cc_extract_length(dt_diff, length_type = "abandonment")
-}
-
-dm <- data.table(M = rep(1:3, each = 5))
-dt * dm
-
-tdt <- cbind(dt_age, dm)
-tdt[V8 >= 5, 
-    .("total_c" = sum(V8*M))]
-tdt[V9 >= 5, .("total_c" = sum(V9*M))]
-tdt[V10 >= 5, .("total_c" = sum(V10*M))]
-
-tdt[, lapply(.SD, max)]
-
-i <- "V9"
-grep('V', colnames(tdt), value = TRUE)
-cdf <- sapply(grep('V', colnames(tdt)), function(i) {
-    # subset rows that are greater than or equal to 5 (i.e., surpassing the abandonment threshold) and
-    tdt[get(names(tdt)[i]) >= 5, 
-        
-        # sum the column age calues multiplied by the carbon accumulation rate
-        sum(get(names(tdt)[i]) * M)] 
-  })
-
-cdf2 <- sapply(grep('V', colnames(tdt), value = TRUE), function(i) {  
-  # subset rows that are greater than or equal to 5 (i.e., surpassing the abandonment threshold) and
-  # sum the column age calues multiplied by the carbon accumulation rate
-  tdt[get(i) >= 5, sum(get(i) * M)] 
-  })
-
-cdf
-cdf2
-cc_create_dt()
-# now, produce a mock script
-
-# tomorrow: write a script to load in the necessary data.tables, then write out the dt_recult.
-
-
-# ----- 0. Start - load the original 1s and 0s data.table (recoded) ----- #
-# dt_recult_age <- fread(input = paste0(path, site, "_binary.csv"))
-dt_recult_age <- data.table::copy(dt)
-
-# make a big file:
-# simplest way
-dt <- cc_create_dt(numrow = 4e7, numcol = 25)
-dt_recult_age <- data.table::copy(dt)
-# prep "big" versions of other data.tables:
-dt_age <- data.table::copy(dt)
-cc_calc_age(dt_age)
-cc_erase_non_abn_periods(dt_age)
-dt_diff <- cc_diff_dt(dt_age)
-
-# rm(dt, dt_age, dt_diff, dt_recult_age, dt_recult, dt_recult_diff, dt_recult_filter)
-
-obj_size(dt_recult_age)
-
-# ----- 1. Run the recultivation age calculator function, specifying abn_threshold, and save to file. ----- #
-# 1.1 Run recult_age function:
-cat(fill = TRUE, "Run cc_calc_recult_age() function, calculating the age of recultivated lands.")
-tic("Run cc_calc_recult_age() (dt_recult_age)")
-dt_recult_age <- cc_calc_recult_age(dt = dt_recult_age, 
-                                    dt_age = dt_age,
-                                    dt_diff = dt_diff,
-                                    abn_threshold = 5)
-toc(log = TRUE)
-
-
-# 1.2. Write out cleaned recultivation age data.table
-cat(fill = TRUE, "Write out cleaned recultivation age data.table to:", paste0(path, site, "_recult_age", run_label,".csv"))
-tic("wrote out cleaned recultivation age data.table (dt_recult_age)")
-fwrite(dt_recult_age, file = paste0(path, site, "_recult_age", run_label,".csv"))
-toc(log = TRUE)
-
-
-# ----- 2. Calculate recultivation diff data.table, to use to extract lengths, and save to file. ----- #
-# Produces a data.table with year-to-year lagged differences (each year subtracted by the previous year, much like base::diff())
-
-# 2.1. Run diff function
-cat(fill = TRUE, "Make dt_diff, with year-to-year lagged differences: cc_diff_dt()")
-tic("made dt_recult_diff")
-
-dt_recult_diff <- cc_diff_dt(dt_recult_age)
-toc(log = TRUE)
-
-# 2.2. Write out dt_recult_diff
-cat(fill = TRUE, "Write out dt_recult_diff to:", 
-    paste0(path, site, "_recult_diff", run_label,".csv"))
-tic("write out dt_diff")
-fwrite(dt_recult_diff, file = paste0(path, site, "_recult_diff", run_label,".csv"))
-toc(log = TRUE)
-
-
-# ----- 3. Extract the length of each period of recultivation following a qualifying period of abandonment, turn into a data.table, and save to file ----- #
-
-# 3.1. Extract length.
-cat(fill = TRUE, "Extract the length of each period of recultivation: cc_extract_length()")
-tic("extracted length")
-# note that this function can be easily modified to search for positive or negative numbers, if multiplying the
-# data.tables by -1 takes a long time. 
-recult_length <- cc_extract_length(dt_recult_diff, length_type = "recultivation")
-toc(log = TRUE)
-
-# 3.2. Create a data.table listing the lengths.
-cat(fill = TRUE, "Create a data.table listing the recultivations lengths, write to:", 
-    paste0(path, site, "_recult_length", run_label,".csv"))
-tic("created data.table of recultivation lengths")
-
-recult_length <- data.table(length = recult_length)
-toc(log = TRUE)
-
-# 3.3. Write to file.
-tic("wrote out length data.table")
-fwrite(recult_length, file = paste0(path, site, "_recult_length", run_label,".csv"))
-toc(log = TRUE)
-
-
-
-# produce a combined data.table with positive ages of abandonment and negative ages of recultivation.
-dt_combo <- dt_age + dt_recult
-
-
-# ------------------------------------------------------------------------ #
-# extras:
-
-# Very useful for comparing the effect of each successive stage of the filtering process.
-dt_diff[, ':='(type = "diff", row = 1:nrow(dt_diff), V1 = NA)]
-dt_age[, ':='(type = "age", row = 1:nrow(dt_age), end = NA)]
-dt_diffc <- rbind(dt_age, dt_diff)
-
-setcolorder(dt_diffc, c("row", "type", paste0("V", 1:25), "end"))
-dt_diffc[order(row, type)]
-
-
-# make a big file:
-# simplest way
-big <- cc_create_dt(numrow = 4e7, numcol = 25)
-
-
-```
-
-## New, simpler extrapolation 
-
-How can I start counting in the first year of abandonment (or qualifying periods of abandonment) and just keep counting, assuming they were never recultivated?
-
-Idea: add the dt_age (abn) and dt_recult_age together, and then run the cc_calc_age() function again
-```{r extrapolate-no-recultivation}
-
-{ # replicate the abn filtering
-dt <- cc_create_bin(numcol = 25)
-dt[c(3, 13), 12:15] <- 0
-dt[c(13), 22:25] <- 0
-# dt <- data.table::copy(dt0)
-
-# abn age
-dt_age <- data.table::copy(dt)
-cc_calc_age(dt_age)
-cc_erase_non_abn_periods(dt_age)
-dt_diff <- cc_diff_dt(dt_age)
-length_dt <- cc_extract_length(dt_diff, length_type = "abandonment")
-length_dt <- data.table(length = length_dt)
-
-# recultivation age
-dt_xy <- data.table::copy(dt)
-dt_xy[, ':='(x = NA, y = NA)][, paste0("V", 1:25) := NULL]
-
-dt_recult_age <- data.table::copy(dt)
-dt_recult_age <- cc_calc_recult_age(dt = cbind(dt_xy, dt_recult_age), 
-                                    dt_age = cbind(dt_xy, dt_age), 
-                                    dt_diff = cbind(dt_xy, dt_diff), 
-                                    abn_threshold = 1)
-dt_recult_diff <- cc_diff_dt(dt_recult_age)
-recult_length <- cc_extract_length(dt_recult_diff, length_type = "recultivation")
-recult_length <- data.table(length = recult_length)
-
-
-dt_combo <- cbind(dt_xy, dt_age) + dt_recult_age
-}
-
-dt_age
-dt_recult_age
-dt_combo
-
-dtt <- data.table::copy(dt)
-
-for (i in 2:ncol(dtt)) {
-    # subset rows that are greater than 0 (i.e. 1, for noncrop), and
-    dtt[get(names(dtt)[i]) > 0, 
-       
-       # set them equal to the previous column's value in that row, plus 1.
-       names(dtt)[i] := get(names(dtt)[i-1]) + 1] 
-}
-
-# start with age dt, and filter to ages that last longer than 5 years, and see what it amounts to by the end of the time series:
-dttt <- data.table::copy(dtt)
-
-cc_calc_potential_age(dttt)
-dttt_diff <- cc_diff_dt(dttt)
-length_dttt <- cc_extract_length(dttt_diff, length_type = "abandonment")
-length_dttt <- data.table(length = length_dttt)
-length_dttt[length >=5, ]
-
-for (i in 2:ncol(dttt) - 1) {
-    # subset rows that are greater than 0 (i.e. 1, for noncrop), and
-    dttt[get(names(dttt)[i]) >= 5, 
-       
-       # set them equal to the previous column's value in that row, plus 1.
-       names(dttt)[i+1] := get(names(dttt)[i]) + 1] 
-}
-
-dtt
-dttt
-
-# compare row by row
-dtt_comp <- rbind(dtt[, ':='("type" = "obs", row = .I)], 
-                  dttt[, ':='("type" = "no_recult", row = .I)])
-
-setcolorder(dtt_comp, c("row", "type", paste0("V", 1:25)))
-dtt_comp[order(row, type)]
-
-```
-
-# test new results
-```{r test}
-list.files(path = paste0(p_dat_derived, run_label)) %>% 
-  grep("area", ., value = TRUE)
-
-list.files(path = paste0(p_dat_derived, "_2022_02_07"), full.names = T) %>% grep("iraq", ., value = TRUE) %>% grep(".rds", ., value = T, invert = T)
-
-
-test_site <- site_df$site[6]
-
-for(test_site in site_df$site) {
-test1 <- lapply(list.files(path = paste0(p_dat_derived, "_2022_02_07"), full.names = T) %>% 
-                  grep(test_site, ., value = TRUE) %>% 
-                  grep(".rds", ., value = T, invert = T),
-                function(i) {read.csv(i)})
-
-
-test2 <- lapply(list.files(path = paste0(p_dat_derived, "_2022_01_31"), full.names = T) %>% 
-                  grep(test_site, ., value = TRUE) %>% 
-                  grep(".rds", ., value = T, invert = T),
-                function(i) {read.csv(i)})
-
-all.equal(test1[[1]], test2[[1]]) %>% print()
-all.equal(test1[[2]], test2[[2]]) %>% print()
-all.equal(test1[[4]], test2[[3]]) %>% print()
-}
-test1[[3]]
-test2[[3]]
-
-```
-
-
 # Calculating cluster times
 
 ```{r seff}
@@ -3523,177 +3252,3 @@ lcc
 
 
 
-# sandbox for manuscript
-
-
-```{r get-decay-stats, include = FALSE}
-
-fitted_combo$type %>% unique()
-
-# update here
-# from endpoints_files.rds
-common_endpoint_dat
-endpoint_n
-coef_l3_endpoints
-augment_endpoints
-fitted_endpoints
-time_to_endpoints
-# exploration
-
-
-endpoint_half_lives_10_25_tmp %>%
-  slice_min(mean) %>% 
-  .$mean %>% floor()
-
-
-endpoint_half_lives_10_25_tmp %>%
-  filter(!grepl("bosnia", site)) %>%
-  slice_max(mean) %>% 
-  .$mean %>% ceiling() # wisconsin
-
-endpoint_half_lives %>%
-  filter(!grepl("bosnia", site)) %>%
-  arrange(desc(mean)) %>%
-  ggplot(mapping = aes(x = endpoint, y = mean#, group = site
-                       )) + 
-  geom_boxplot(notch = T) +
-  geom_jitter()
-
-endpoint_half_lives_10_25_tmp %>%
-  # filter(!grepl("bosnia", site)) %>%
-  .$mean %>% boxplot(notch = T)
-
-endpoint_half_lives %>%
-  filter(!grepl("bosnia", site), 
-         endpoint <= 25, endpoint >= 10) %>%
-  .$mean %>% mean() %>% round(digits = 2)
-
-endpoint_half_lives %>%
-  filter(grepl("bosnia", site)) %>% arrange(endpoint) %>%
-  filter(mean < 50)
-
-# shaanxi
-
-endpoint_half_lives %>%
-  filter(grepl("shaanxi", site)) %>%
-  .$mean %>% min()
-  # slice_min(mean)
-slice_max(mean)
-
-
-fitted_endpoints
-
-fitted_endpoints %>% filter(age == 20) %>%
-  left_join(endpoint_n, by = "endpoint") %>%
-  group_by(site, age) %>% 
-  summarise(median = median(proportion)) %>%
-  ggplot(aes(y = fct_reorder(site, median), 
-             # x = proportion,
-             x = median,
-             # group = endpoint, color = endpoint, size = total_obs
-             )) +
-  geom_point(position = position_dodge(0.7), alpha = 0.7) + 
-  scale_color_viridis(direction = -1)
-
-fitted_endpoints %>% filter(age == 20) %>% arrange(fitted) %>% slice_min(fitted) %>% .$fitted %>% round(digits = 4) * 100
-
-
-
-# ------------------------------------------------ #
-
-endpoint_half_lives_10_25_tmp <- 
-  endpoint_half_lives %>%
-  left_join(site_labels) %>%
-  filter(endpoint <= 25, endpoint >= 10)
-
-decay_stats <- list(
-  "hl_mean" = endpoint_half_lives %>%
-    filter(!grepl("bosnia", site), 
-           endpoint <= 25, endpoint >= 10) %>%
-    .$mean %>% mean() %>% round(digits = 2),
-  "hl_sd" = endpoint_half_lives %>%
-    filter(!grepl("bosnia", site), 
-           endpoint <= 25, endpoint >= 10) %>%
-    .$mean %>% sd() %>% round(digits = 2),
-  
-  "t0.5_min" = endpoint_half_lives_10_25_tmp %>%
-    slice_min(mean) %>% .$mean %>% floor(),
-  "t0.5_max" = endpoint_half_lives_10_25_tmp %>%
-    filter(!grepl("bosnia", site)) %>%
-    slice_max(mean) %>% .$mean %>% ceiling(),
-  
-  "t0.5_min_site" = endpoint_half_lives_10_25_tmp %>%
-    slice_min(mean) %>% .$site_long,
-  "t0.5_max_site" = endpoint_half_lives_10_25_tmp %>%
-    filter(!grepl("bosnia", site)) %>%
-    slice_max(mean) %>% .$site_long
-)
-
-# ---------------------------------------------------------------------- #
-# simple scenario without recultivation
-sum(potential_v_obs_2017_df$area_ha_Observed) / 
-  sum(potential_v_obs_2017_df$area_ha_Potential)
-
-```
-
-```{r carbon-stats, include = FALSE}
-endpoint_half_lives %>%
-  arrange(desc(mean)) %>% print (n =40)
-
-potential_v_obs_2017_df %>%
-  select(-c(site, site_long)) %>%
-  as.matrix() %>%
-  colSums(., dims = 1)/10^6
-
-potential_v_obs_2017_df %>%
-  summarise(total_area = sum(area_ha_Observed),
-             total_MgC = sum(Mg_C_Observed)) %>%
-  mutate(MgC_per_ha = total_MgC / total_area) %>%
-  .$total_MgC / 10^6
-
-round(100* sum(potential_v_obs_2017_df$Mg_C_Observed) / sum(potential_v_obs_2017_df$Mg_C_Potential), digits = 2)
-
-carbon_tmp <-
-  potential_v_obs_2017_df %>%
-  mutate(MgC_per_ha_Observed = Mg_C_Observed / area_ha_Observed,
-         MgC_per_ha_Potential = Mg_C_Potential / area_ha_Potential) %>%
-  arrange(MgC_per_ha_Observed) %>%
-  select(site, site_long, MgC_per_ha_Observed, MgC_per_ha_Potential)
-
-carbon_tmp
-carbon_tmp %>% filter(MgC_per_ha_Observed < 4) %>% .$site_long %>% cat(sep = "; ")
-
-carbon_tmp %>% filter(site == "goias") %>% .$MgC_per_ha_Observed %>% round(digits = 2)
-
-potential_v_obs_2017_df
-
-carbon_stats <- list(
-  "total_observed"
-)
-
-persistence_dat$bins <- factor(persistence_dat$bins, levels = levels(persistence_dat$bins)[c(5, 1, 2, 3, 4)])
-
-
-persistence_dat %>% filter(year == 2017) %>%
-  group_by(bins, site) %>%
-  summarise(area_ha = sum(area_ha)) %>%
-  left_join(area_dat %>% filter(grepl(">=5", lc), year == 2017) %>% 
-              rename(total = area_ha), by = "site") %>%
-  mutate(prop = area_ha/total) %>%
-  arrange(site)
-
-persistence_dat %>% filter(year == 2017, age >= 20) %>% group_by(site) %>%
-  summarise(area_ha = sum(area_ha)) %>%
-    left_join(area_dat %>% filter(grepl(">=5", lc), year == 2017) %>% 
-                rename(total = area_ha), by = "site") %>%
-  mutate(prop_over_20 = area_ha/total)
-
-
-
-
-site_forest_soc_combined$belarus$forest_soc_Y20 %>% plot()
-site_forest_soc_combined$belarus$forest_soc_YSS %>% plot()
-
-
-
-```
