--- a/scripts/1_summary_stats.Rmd
+++ b/scripts/1_summary_stats.Rmd
@@ -787,7 +787,7 @@ ggsave(plot = gg_mean_recult_length_by_threshold_flipped,
 
 
 
-## Distributions of abandonment lengths (durations)
+# Distributions of abandonment lengths (durations)
 
 ```{r histograms-of-lengths}
 # Plot all site histograms together:
@@ -948,319 +948,9 @@ write_csv(recult_length_distribution,
 ```
 
 
-```{r violin-plots}
-# Violin plots
-
-gg_mean_w_violin <-
-  ggplot() + 
-  theme_classic() +
-  theme(axis.text.x = element_text(angle = 330, vjust = 1, hjust = 0),
-        plot.caption = element_text(face = "italic")) +
-  labs(linetype = NULL,
-       color = "Mean of:", 
-       y = "Mean abandonment duration (years)", 
-       x = "Site") +
-  geom_jitter(data = length_distribution,
-              mapping = aes(x = fct_reorder(site, order), y = length),
-              height = 0.5, width = 0.2, alpha = 0.025) +
-
-  geom_violin(data = length_distribution, 
-              mapping = aes(x = fct_reorder(site, order), y = length), scale = "width", alpha = 0) +
-  
-  geom_point(data = mean_length_df %>%
-           filter(abn_threshold == "5"),
-             mapping = aes(x = fct_reorder(site, order), y = mean_duration, color = length_type),
-             size = 3, alpha = 0.85) + 
-  
-  geom_hline(data = mean_length_df %>% 
-               group_by(abn_threshold, length_type) %>%
-               summarise(overall_mean = mean(mean_duration, na.rm = TRUE)) %>% 
-               filter(abn_threshold == "5"), 
-             mapping = aes(yintercept = overall_mean, 
-                           col = length_type, 
-                           linetype = "Mean \nAcross \nSites")) + 
-  
-  scale_linetype_manual(values = c("Mean \nAcross \nSites" = "dashed")) + 
-  scale_color_discrete(labels = c(all = "All periods", 
-                                   max = "Max. length \nper pixel")) +
-  scale_x_discrete(breaks = site_df$site,
-                   labels = site_df$description) +
-  guides(color = guide_legend(order = 1)) + 
-  scale_y_continuous(breaks = c(5, 10, 15, 20, 25, 30))
 
 
-ggsave(plot = gg_mean_w_violin,
-       filename = paste0(p_plots, run_label, "/mean_lengths_w_violin", run_label, ".pdf"), 
-    width = 6, height = 5, units = "in")
-```
-
-```{r fig2-ggridges}
-# Plot the mean abandonment length at each site, with the distribution of all abandonment lengths displayed behind it, plotted using the {ggridges} package.
-
-show_col(hue_pal()(3)[1]) # default ggplot colors
-
-ggplot() + 
-  ggridges::geom_density_ridges2(
-    data = length_distribution, 
-    mapping = aes(y = as.numeric(fct_reorder(site, desc(order))), 
-                  x = length, group = site),
-    stat = "binline", bins = 26,
-    scale = 0.95,
-    panel_scaling = FALSE) + 
-  scale_y_continuous(breaks = 1:length(fig2_labels1),
-                     labels = NULL,
-                     sec.axis = sec_axis(~.,
-                                         breaks = 1:length(fig2_labels1),
-                                         labels = fig2_labels1)) + 
-  labs(y = "Proportion")
-
-gg_mean_length_ridges <-
-  ggplot() +
-  
-  ggridges::geom_density_ridges2(
-    data = length_distribution, 
-    mapping = aes(y = fct_reorder(site, desc(order)), 
-                  x = length, group = site),
-    stat = "binline", bins = 26, # these parameters control how smooth the distribution is, or whether it is binned.
-    scale = 0.95) + 
-  
-  # Add a vertical line indicating the mean value across sites
-  geom_vline(data = mean_length_df %>% 
-               group_by(abn_threshold, length_type) %>%
-               summarise(overall_mean = mean(mean_duration, na.rm = TRUE)) %>% 
-               filter(abn_threshold == "5", length_type == "all"),
-             mapping = aes(xintercept = overall_mean, 
-                           # col = length_type, 
-                           linetype = "Mean across all sites"),
-             color = hue_pal()(3)[1]) + 
-  scale_linetype_manual(values = c("Mean across all sites" = "dashed")) +
-  
-  # add points indicating the mean value for each site
-  geom_point(data = mean_length_df %>%
-           filter(abn_threshold == "5", length_type == "all"),
-             mapping = aes(y = fct_reorder(site, desc(order)),
-                           x = mean_duration, 
-                           color = length_type),
-             size = 3, alpha = 0.85) + 
-  scale_color_discrete(labels = c(all = "Site-level mean",
-                                   max = "Maximum duration\nper pixel")) +
-  scale_y_discrete(expand = c(0.02, 0),
-                   labels = fancy_labels,
-                   position = "left"#, breaks = c(0, 0.1)
-                   ) +
-  
-  scale_x_continuous(breaks = c(5, 10, 15, 20, 25, 30), expand = c(0, 0)) + 
-  theme_classic() +
-  labs(
-    y = NULL,
-    #y = "Proportion", # of abandonment periods of a given duration",
-       x = "Abandonment duration (years)",
-       color = NULL, linetype = NULL) + 
-  theme(legend.position = "bottom", #c(0,0.3), #
-        legend.margin=margin(),
-        axis.text.y = element_text(vjust = 0, size=8
-                                   ),
-        panel.grid.major.x = element_line()) + 
-  guides(color = guide_legend(order = 1, nrow = 1, override.aes = list(linetype = 0)), 
-         linetype = guide_legend(order = 2, nrow = 1#, label.vjust = 0
-                                 )) + 
-  coord_cartesian(clip = "off")
-
-
-# gg_mean_length_ridges
-
-# save plot
-ggsave(plot = 
-         gg_mean_length_ridges + 
-         theme(legend.spacing.x = unit(0.5, "mm"),
-               legend.position = c(0.36, -0.13), legend.direction = "horizontal",
-               legend.box = "horizontal",
-               plot.margin = margin(5, 5, 27, 5),
-               legend.box.just = "left",
-               legend.text.align = 0,
-               legend.title.align = 1)
-         ,
-       
-       filename = paste0(p_plots, "/fig2_left", run_label, ".pdf"), 
-    width = 3.42, height = 5, units = "in")
-
-
-
-# ------------------------------------------------------------------------ #
-# plotting site descriptions on the right side of the figure.
-# ------------------------------------------------------------------------ #
-
-# make labels
-fig2_labels1 <- levels(fct_reorder(length_distribution$site, desc(length_distribution$order)))
-fig2_labels_order <- sapply(1:11, function(i) {grep(fig2_labels1[i], site_df$site)})
-fancy_labels # formerly fig2_labels_long 
-
-
-gg_mean_length_ridges_switch <-
-  ggplot() +
-  
-  geom_density_ridges2(
-    data = length_distribution, 
-    mapping = aes(y = as.numeric(fct_reorder(site, desc(order))), 
-                  x = length, group = site),
-    stat = "binline", bins = 26, 
-    scale = 0.95) + 
-  
-  scale_y_continuous(expand = c(0.02, 0),
-                     breaks = 1:length(fig2_labels1),
-                     labels = NULL,
-                     position = "left",
-                     sec.axis = 
-                       sec_axis(~.,
-                                breaks = 1:length(fig2_labels1),
-                                labels = fancy_labels[fig2_labels_order]
-                                         )) + 
-  
-  geom_vline(data = mean_length_df %>%
-               group_by(abn_threshold, length_type) %>%
-               summarise(overall_mean = mean(mean_duration, na.rm = TRUE)) %>%
-               filter(abn_threshold == "5", length_type == "all"),
-             mapping = aes(xintercept = overall_mean,
-                           linetype = "Mean across all sites"),
-             color = hue_pal()(3)[1]) +
-  
-  scale_linetype_manual(values = c("Mean across all sites" = "dashed")) +
-  
-  geom_point(data = mean_length_df %>%
-           filter(abn_threshold == "5", length_type == "all"),
-             mapping = aes(y = as.numeric(fct_reorder(site, desc(order))),
-                           x = mean_duration, 
-                           color = length_type),
-             size = 3, alpha = 0.85) + 
-  scale_color_discrete(labels = c(all = "Site-level mean",
-                                  max = "Maximum duration\nper pixel")) +
-  
-  scale_x_continuous(breaks = c(5, 10, 15, 20, 25, 30), expand = c(0, 0)) +
-  theme_classic() +
-  labs(y = "Proportion",
-       x = "Abandonment duration (years)",
-       color = NULL, linetype = NULL) + 
-  theme(legend.position = "bottom", #c(0,0.3), #
-        legend.margin=margin(),
-        axis.text.y = element_text(vjust = 0, size=8
-                                   ),
-        panel.grid.major.x = element_line()) + 
-  guides(color = guide_legend(order = 1, nrow = 1, 
-                              override.aes = list(linetype = 0)), 
-         linetype = guide_legend(order = 2, nrow = 1)) + 
-  coord_cartesian(clip = "off")
-
-
-
-# save plot
-ggsave(plot = 
-         gg_mean_length_ridges_switch + 
-         theme(legend.spacing.x = unit(0.5, "mm"),
-               legend.position = c(0.6, -0.13), 
-               legend.direction = "horizontal",
-               legend.box = "horizontal",
-               plot.margin = margin(5, 5, 27, 5),
-               legend.box.just = "left",
-               legend.text.align = 0,
-               legend.title.align = 1),
-       
-       filename = paste0(p_plots, "/fig2_0", run_label, ".pdf"), 
-    width = 3.42, height = 5, units = "in")
-```
-
-
-```{r si-fig2-ridges-w-max}
-
-length_distribution_max
-
-fig2_max_labels1 <- levels(fct_reorder(length_distribution_max$site, desc(length_distribution_max$order)))
-fig2_max_labels_order <- sapply(1:11, function(i) {grep(fig2_max_labels1[i], site_df$site)})
-fancy_labels # formerly, fig2_max_labels_long
-
-gg_mean_length_ridges_w_max <-
-  ggplot() +
-  
-  geom_density_ridges2(
-    data = length_distribution_max, 
-    mapping = aes(y = as.numeric(fct_reorder(site, desc(order))), 
-                  x = length, group = site),
-    stat = "binline", bins = 26, 
-    scale = 0.95) + 
-  
-  scale_y_continuous(expand = c(0.02, 0),
-                     breaks = 1:length(fig2_max_labels1),
-                     labels = NULL,
-                     position = "left",
-                     sec.axis = 
-                       sec_axis(~.,
-                                breaks = 1:length(fig2_max_labels1),
-                                labels = fancy_labels[fig2_max_labels_order]
-                                         )) +
-  
-  # scale_y_discrete(expand = c(0.02, 0),
-  #                  labels = c("belarus" = "Vitebsk, Belarus /\nSmolensk, Russia",
-  #                             "bosnia_herzegovina" = "Bosnia &\n Herzegovina",
-  #                             "chongqing" = "Chongqing, China",
-  #                             "goias" = "Goiás, Brazil",
-  #                             "iraq" = "Iraq",
-  #                             "mato_grosso" = "Mato Grosso,\nBrazil",
-  #                             "nebraska" = "Nebraska /\nWyoming, USA",
-  #                             "orenburg" = "Orenburg, Russia /\nUralsk, Kazakhstan",
-  #                             "shaanxi" = "Shaanxi/Shanxi,\nChina",
-  #                             "volgograd" = "Volgograd, Russia",
-  #                             "wisconsin" = "Wisconsin, USA")) +
-  
-  geom_vline(data = mean_length_df %>% 
-               group_by(abn_threshold, length_type) %>%
-               summarise(overall_mean = mean(mean_duration, na.rm = TRUE)) %>% 
-               filter(abn_threshold == "5"),
-             mapping = aes(xintercept = overall_mean, 
-                           col = length_type, 
-                           linetype = "Mean\nacross\nall sites")) + 
-  scale_linetype_manual(values = c("Mean\nacross\nall sites" = "dashed")) +
-  
-  geom_point(data = mean_length_df %>%
-           filter(abn_threshold == "5"),
-             mapping = aes(y = as.numeric(fct_reorder(site, desc(order))),
-                           x = mean_duration, 
-                           color = length_type),
-             size = 3, alpha = 0.85) + 
-  scale_color_discrete(labels = c(all = "All abandonment periods",
-                                   max = "Maximum duration\nper pixel")) +
-    
-  scale_x_continuous(breaks = c(5, 10, 15, 20, 25, 30), expand = c(0, 0)) + 
-  theme_classic() +
-  labs(y = "Proportion", 
-       x = "Abandonment duration (years)",
-       color = "Site-level \nmean of:", linetype = NULL) + 
-  theme(legend.position = "bottom", #c(0,0.3), #
-        legend.margin=margin(),
-        axis.text.y = element_text(vjust = 0, size=8
-                                   ),
-        panel.grid.major.x = element_line()) + 
-  guides(color = guide_legend(order = 1, nrow = 2, 
-                              override.aes = list(linetype = 0)), 
-         linetype = guide_legend(order = 2, label.vjust = 0)) + 
-  coord_cartesian(clip = "off")
-
-
-# gg_mean_length_ridges_w_max
-
-# save plot
-ggsave(plot = gg_mean_length_ridges_w_max + 
-         theme(legend.spacing.x = unit(0.5, "mm"),
-               legend.position = c(0.7, -0.17), legend.direction = "horizontal", 
-               legend.box = "horizontal",
-               plot.margin = margin(5, 5, 45, 5),
-               legend.box.just = "left",
-               legend.text.align = 0, 
-               legend.title.align = 1),
-       filename = paste0(p_plots, "/fig2_w_max0", run_label, ".pdf"), 
-    width = 3.42, height = 5, units = "in")
-
-```
-
-### Potential abandonment
+## Potential abandonment
 
 ```{r potential-mean-lengths}
 mean_length_df
@@ -1429,102 +1119,10 @@ write_csv(potential_length_distribution,
 ```
 
 
-```{r si-fig2-potential}
-
-# ------------------------------------------------------------------------ #
-# plotting site descriptions on the right side of the figure.
-# ------------------------------------------------------------------------ #
-
-# make labels
-fig2_potential_labels1 <- 
-  levels(fct_reorder(potential_length_distribution$site, 
-                     desc(potential_length_distribution$order)))
-
-
-fig2_potential_labels_order <- sapply(1:11, function(i) {grep(fig2_potential_labels1[i], site_df$site)})
-
-fancy_labels # formerly fig2_labels_long 
-
-# Update 
-potential_length_distribution
-potential_mean_length_df
-
-
-gg_mean_length_ridges_potential <-
-  ggplot() +
-  
-  geom_density_ridges2(
-    data = potential_length_distribution, 
-    mapping = aes(
-      y = as.numeric(fct_reorder(site, desc(order))), 
-      x = length, group = site),
-    stat = "binline", bins = 26, 
-    scale = 0.95) + 
-
-  scale_y_continuous(expand = c(0.02, 0),
-                     breaks = 1:length(fig2_potential_labels1),
-                     labels = NULL,
-                     position = "left",
-                     sec.axis =
-                       sec_axis(~.,
-                                breaks = 1:length(fig2_potential_labels1),
-                                labels = fancy_labels[fig2_potential_labels_order]
-                                         )) +
-
-  geom_vline(data = potential_mean_length_df %>%
-               group_by(abn_threshold, length_type) %>%
-               summarise(overall_mean = mean(mean_duration, na.rm = TRUE)) %>%
-               filter(abn_threshold == "5", 
-                      length_type == "potential"),
-             mapping = aes(xintercept = overall_mean,
-                           linetype = "Mean across all sites"),
-             color = hue_pal()(3)[1]) +
-  
-  scale_linetype_manual(values = c("Mean across all sites" = "dashed")) +
-  
-  geom_point(data = potential_mean_length_df %>%
-           filter(abn_threshold == "5", length_type == "potential"),
-             mapping = aes(y = as.numeric(fct_reorder(site, desc(order))),
-                           x = mean_duration, 
-                           color = length_type),
-             size = 3, alpha = 0.85) + 
-  scale_color_discrete(labels = c(potential = "Site-level mean")) +
-  
-  scale_x_continuous(breaks = c(5, 10, 15, 20, 25, 30), expand = c(0, 0)) +
-  theme_classic() +
-  labs(y = "Proportion of abandonment periods at given length",
-       x = "Potential abandonment duration (yrs),\nassuming no recultivation",
-       color = NULL, linetype = NULL) + 
-  theme(
-        axis.text.y = element_text(vjust = 0, size=8),
-        panel.grid.major.x = element_line()) + 
-  guides(color = guide_legend(order = 1, nrow = 1, 
-                              override.aes = list(linetype = 0)), 
-         linetype = guide_legend(order = 2, nrow = 1)) + 
-  coord_cartesian(clip = "off") + 
-  theme(axis.text.y = element_text(vjust = 0, size=8),
-        panel.grid.major.x = element_line(),
-        legend.spacing.x = unit(0.5, "mm"),
-        legend.position = c(0.6, -0.17), 
-        legend.direction = "horizontal",
-        legend.box = "horizontal",
-        plot.margin = margin(5, 5, 27, 5),
-        legend.background = element_blank(),
-        legend.box.just = "left",
-        legend.text.align = 0,
-        legend.title.align = 1)
 
 
 
-# save plot
-ggsave(plot = gg_mean_length_ridges_potential,
-       filename = paste0(p_plots, "/fig2_potential0", run_label, ".pdf"), 
-    width = 3.42, height = 5, units = "in")
-```
-
-
-
-### Recultivation 
+## Recultivation 
 
 ```{r calc-mean-length-recultivation}
 # 0. Load distilled length data
@@ -1655,84 +1253,11 @@ write_csv(recult_summary_stats_all_sites_pooled,
 ```
 
 
-```{r si-fig2.2-recult-length-dist}
+## Final distribution figures (*manual*)
 
-fig2_recult_labels1 <- levels(fct_reorder(recult_length_distribution$site, desc(recult_length_distribution$order)))
-fig2_recult_labels_order <- sapply(1:11, function(i) {grep(fig2_recult_labels1[i], site_df$site)})
-fancy_labels # 
+The observed abandonment distribution figure was initially Figure 2 in the draft manuscript, which is why these figures are collectively referred to as Fig2 variations.
 
-gg_mean_recult_length <-
-  ggplot() +
-  
-  geom_density_ridges2(
-    data = recult_length_distribution, 
-    mapping = aes(y = as.numeric(fct_reorder(site, desc(order))), 
-                  x = length, group = site),
-    stat = "binline", bins = 26, 
-    scale = 0.95) + 
-  
-  scale_y_continuous(expand = c(0.02, 0),
-                     breaks = 1:length(fig2_recult_labels1),
-                     labels = NULL,
-                     position = "left",
-                     sec.axis =
-                       sec_axis(~.,
-                                breaks = 1:length(fig2_recult_labels1),
-                                labels = fancy_labels[fig2_recult_labels_order]
-                                         )) +
-
-  geom_vline(data = mean_recult_length_df %>% 
-               group_by(recult_threshold, length_type) %>%
-               summarise(overall_mean = mean(mean_duration, na.rm = TRUE)) %>% 
-               filter(recult_threshold == "1"),
-             mapping = aes(xintercept = overall_mean, 
-                           col = length_type, 
-                           linetype = "Mean\nacross\nall sites")) + 
-  scale_linetype_manual(values = c("Mean\nacross\nall sites" = "dashed")) +
-  
-    # add site mean values
-  geom_point(data = mean_recult_length_df %>%
-           filter(recult_threshold == "1"),
-             mapping = aes(y = as.numeric(fct_reorder(site, desc(order))),
-                           x = mean_duration, 
-                           color = length_type),
-             size = 3, alpha = 0.85) + 
-  scale_color_discrete(labels = c(recult = "All\nrecultivation\nperiods")) +
-    
-  scale_x_continuous(breaks = c(5, 10, 15, 20, 25, 30), expand = c(0, 0)) + 
-  theme_classic() +
-  labs(y = "Proportion", 
-       x = "Recultivation duration (years)",
-       color = "Site-level \nmean of:", linetype = NULL) + 
-  theme(legend.position = "bottom", #c(0,0.3), #
-        legend.margin=margin(),
-        axis.text.y = element_text(vjust = 0, size=8
-                                   ),
-        panel.grid.major.x = element_line()) + 
-  guides(color = guide_legend(order = 1, nrow = 1, 
-                              override.aes = list(linetype = 0)), 
-         linetype = guide_legend(order = 2, label.vjust = 0)) + 
-  coord_cartesian(clip = "off")
-
-
-gg_mean_recult_length
-
-# save plot
-ggsave(plot = gg_mean_recult_length + 
-         theme(legend.spacing.x = unit(0.5, "mm"),
-               legend.position = c(0.7, -0.17), legend.direction = "horizontal", 
-               legend.box = "horizontal",
-               plot.margin = margin(5, 5, 45, 5),
-               legend.box.just = "left",
-               legend.text.align = 0, 
-               legend.title.align = 1),
-       filename = paste0(p_plots, "/fig2_recult0", run_label, ".pdf"), 
-    width = 3.42, height = 5, units = "in")
-```
-
-### [*Final*] Manually producing distribution figures
-
-```{r man-fig2}
+```{r man-fig2-obs}
 
 gg_fig2_manual <-
   length_distill_df %>% 
