--- a/scripts/Crawford_abandonment_MS+SI.Rmd
+++ b/scripts/Crawford_abandonment_MS+SI.Rmd
@@ -194,13 +194,15 @@ load(file = paste0(p_derived2, "/decay_endpoints_files", run_label, ".rds"), ver
 fitted_combo <- fitted_combo %>%
   left_join(site_labels)
 
-# load new extrapolation data:
+# load new potential abandonment data:
 potential_area_dat <- read_csv(file = paste0(p_derived2, "potential_area_dat", run_label, ".csv"))
 potential_persistence_dat <- read_csv(file = paste0(p_derived2, "potential_persistence_dat", run_label, ".csv"))
+
 
 # load carbon data:
 site_carbon_df <- read_csv(file = paste0(p_derived2, "/carbon_df", run_label,".csv")) %>%
   left_join(site_labels)
+
 
 ```
 
